[workspace]
members = [
	"moq-transport",
	"moq-relay-ietf",
	"moq-pub",
	"moq-sub",
	"moq-api",
	"moq-clock-ietf",
	"moq-native-ietf",
	"moq-catalog",
	"moq-test-client",
]
resolver = "2"

[workspace.dependencies]
web-transport = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Use debug symbols in production until things are more stable
[profile.release]
debug = true
