[package]
name = "moq-test-client"
description = "MoQT Interop Test Client - A standardized test client for interoperability testing"
authors = []
repository = "https://github.com/cloudflare/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "webtransport", "moqt", "testing", "interop"]
categories = ["development-tools::testing", "network-programming"]

[[bin]]
name = "moq-test-client"
path = "src/main.rs"

[dependencies]
moq-transport = { path = "../moq-transport", version = "0.12" }
moq-native-ietf = { path = "../moq-native-ietf", version = "0.7" }
web-transport = "0.3"

url = "2"

# Async stuff
tokio = { version = "1", features = ["full", "time"] }

# CLI, logging, error handling
clap = { version = "4", features = ["derive", "env"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
